--- a/TestDemo/Views/Home/Index.cshtml
+++ b/TestDemo/Views/Home/Index.cshtml
@@ -8,10 +8,24 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Windows Azure Test</title>
+    <script src="~/Scripts/jquery-1.8.2.min.js"></script>
+    <script>
+        var name=$("#txt1").val();
+        var password=$("#txt2").val();
+        $(function () {
+            $.post("/Home/InsertData", {name:name,password:password},function(){
+                alert("添加成功");
+            });
+        })
+    </script>
 </head>
 <body>
     <div>
+        <input type="text" id="txt1" placeholder="请输入用户名" />   <br />
+        <input type="text" id="txt2" placeholder="请输入密码" />     <br />
+        <input type="button" id="btn" value="添加" />
+
         @ViewData["DataMsg"]   &nbsp;&nbsp;&nbsp;
         @ViewBag.DataMsg
         <hr />
