--- a/TestDemo/Views/Home/Index.cshtml
+++ b/TestDemo/Views/Home/Index.cshtml
@@ -10,8 +10,15 @@
     <meta name="viewport" content="width=device-width" />
     <title>Windows Azure Test</title>
     <script src="~/Scripts/jquery-1.8.2.min.js"></script>
+    <style>
+        td {
+
+        }
+    </style>
     <script>
         $(function () {
+            $("table:last tr:even").css("background-color", "#bbbbff");
+
             $("#btn").click(function () {
                 var name = $("#txt1").val();
                 var password = $("#txt2").val();
@@ -30,20 +37,22 @@
     </script>
 </head>
 <body>
+    <h1 style="text-align:center">该网站被访问了 <span style="color:red">@ViewData["times"]</span> 次</h1>
     <div>
-        <table border="1" style="border-collapse:collapse">
+        <table border="1" style="border-collapse:collapse;margin:auto;">
             <tr><td><input type="text" id="txt1" placeholder="请输入用户名" /></td></tr>
             <tr><td><input type="text" id="txt2" placeholder="请输入密码" /></td></tr>
-            <tr><td style="text-align:center;"><input type="button" id="btn" value="添加" /></td></tr>
+            <tr><td style="text-align:center;"><input type="button" id="btn" value="添加" style="width:61px;height:35px;" /></td></tr>
         </table>
 
-        @ViewData["DataMsg"]   &nbsp;&nbsp;&nbsp;
-        @ViewBag.DataMsg
         <hr />
-        @ViewData["BagMsg"]   &nbsp;&nbsp;&nbsp;
-        @ViewBag.BagMsg
+        <table border="1" style="border-collapse:collapse;margin:auto;">
+            <tr><td>ViewData</td><td>@ViewData["DataMsg"]</td><td>@ViewBag.DataMsg</td></tr>
+            <tr><td>ViewData</td><td>@ViewData["BagMsg"]</td><td>@ViewBag.BagMsg</td></tr>
+        </table>
+
         <hr />
-        <table border="1" style="border-collapse:collapse">
+        <table border="1" style="border-collapse:collapse;margin:auto;">
             <thead>
                 <tr>
                     <th>用户名</th>
